Code cleanup/lint slaying
Signed-off-by: Lars Roe <lars@larsroe.com>